--- a/langren.html
+++ b/langren.html
@@ -111,7 +111,7 @@
 		else{
 			var out = "";
 			for(var i=0;i<rolesNum;i++){
-				out += "第"+i+"号："+roles[i]+"\n";
+				out += "第"+(i+1)+"号："+roles[i]+"\n";
 			}
 			alert(out);
 		}
