--- a/langren.html
+++ b/langren.html
@@ -130,23 +130,23 @@
 <body>
 狼人游戏小小小助手
 <br/>
-<input type="button"  style="width:100%;height:200px" onClick="refresh()" value="刷新狼人游戏" />
+<input type="button"  style="width:100%;height:150px;font-size:80px" onClick="refresh()" value="刷新狼人游戏" />
 <br/>
 <br/>
-角色 <input type="text" style="width:100%;height:200px" value="" id="role"/>
+角色 <input type="text" style="width:100%;height:150px;font-size:80px" value="" id="role"/>
 <br/>
-数量 <input type="number" style="width:100%;height:200px" name="points" min="1" max="10" value="1" id="num"/>
+数量 <input type="number" style="width:100%;height:150px;font-size:80px" name="points" min="1" max="10" value="1" id="num"/>
 <br/>
-<input type="button" style="width:100%;height:200px" onClick="addRole()" value="添加狼人角色" />
-<br/>
-<br/>
-<input type="button" style="width:100%;height:200px" onClick="startGame()" value="开始游戏" />
+<input type="button" style="width:100%;height:150px;font-size:80px" onClick="addRole()" value="添加狼人角色" />
 <br/>
 <br/>
-<input type="button" style="width:100%;height:200px" onClick="getOneRole()" value="抽取角色" />
+<input type="button" style="width:100%;height:150px;font-size:80px" onClick="startGame()" value="开始游戏" />
 <br/>
 <br/>
-<input type="button" style="width:100%;height:200px" onClick="showRoleList()" value="开关上帝视角" />
+<input type="button" style="width:100%;height:150px;font-size:80px" onClick="getOneRole()" value="抽取角色" />
+<br/>
+<br/>
+<input type="button" style="width:100%;height:150px;font-size:80px" onClick="showRoleList()" value="开关上帝视角" />
 
 </body>
 </html>
