--- a/zhiyuan2.html
+++ b/zhiyuan2.html
@@ -145,7 +145,7 @@
 	<script src="http://zhuyu19911016.oicp.net/page/metronic/global/plugins/jqueryweui/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="http://zhuyu19911016.oicp.net/page/metronic/global/plugins/jqueryweui/jquery-weui.js" type="text/javascript"></script>
 	<script type="text/javascript"> 
-		var rootPath = "";
+		var rootPath = "http://zhuyu19911016.oicp.net";
 		var contentsAvaliable = true;//标识还有数据可以加载
 		var loading = false;
 		var page = 0;
@@ -194,7 +194,7 @@
 				$.showLoading("正在加载...");
 		        page++;
 		        loading = true;
-		        var url = rootPath + "http://zhuyu19911016.oicp.net/voteline/getMobileData";
+		        var url = rootPath + "/voteline/getMobileData";
 		        var datas = {
 		        	page : { currentPage : page , pageSize : pageSize },
 		        	param : { type : type.toString(), schoolName : schoolName ,bktype : bktype.toString()}
