--- a/wolf/index.html
+++ b/wolf/index.html
@@ -84,6 +84,7 @@
 		rolesNum = rolesNum+num;
 		rolesType = rolesType+1;
 		alert("成功添加 "+num+" 个 "+role+" 角色");
+		document.getElementById('role').value = ""
 	}
   }
   function startGame(){
