--- a/wolf/index.html
+++ b/wolf/index.html
@@ -83,8 +83,8 @@
 		rolesCount_save[rolesType] = num;
 		rolesNum = rolesNum+num;
 		rolesType = rolesType+1;
+		document.getElementById('role').value = "";
 		alert("成功添加 "+num+" 个 "+role+" 角色");
-		document.getElementById('role').value = ""
 	}
   }
   function startGame(){
